Fix: align archive buttons to tasks

--- a/app/stylesheets/objects/_task-tile.scss
+++ b/app/stylesheets/objects/_task-tile.scss
@@ -2,6 +2,7 @@
     #TASK TILE
 \*------------------------------------*/
 .task-wrapper {
+  position: relative;
   font-family: avenir;
   margin-left: auto;
   margin-right: auto;
